--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@types/morgan": "^1.9.2",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
-    "graphql-request": "^3.4.0"
+    "graphql-request": "^3.4.0",
+    "morgan": "^1.10.0"
   }
 }
